# CSC3060_project5

bonus/: CMakeLists.txt  bonus_kernel.cpp  bonus_kernel.h  matmul.cpp
bonus/build-bonus/: CMakeCache.txt  Makefile  cmake_install.cmake  run_all_bonus  single_bench_bonus
build-bonus/: CMakeCache.txt  Makefile  cmake_install.cmake  run_all_bonus  single_bench_bonus
include/: filter_gradient.h  graph.h  grff.h
src/kernel/: bitwise.cpp  blackscholes.cpp  graph.cpp  grff.cpp  image_proc.cpp  relu.cpp  sparse_spmm.cpp
src/main/: run_all.cpp  single_bench.cpp
